--- a/index.html
+++ b/index.html
@@ -23,11 +23,32 @@
 
 <main class="content">
     <section>
-        <h2>Welcome</h2>
+        <h2>A Place for Reflection and Understanding</h2>
+
         <p>
-            This space is dedicated to reflection, learning, and connection.
-            Explore timeless wisdom, everyday life, scientific thought,
-            human love, and the strength of community.
+            This website was created for Muslims living in non-Muslim countries,
+            for those who are new to Islam, and for anyone who is simply curious
+            to learn what Islam is truly about.
+        </p>
+
+        <p>
+            Here, Islam is approached with sincerity, balance, and hope.
+            Through the Qur’an, the Sunnah, and the lives of the Prophets,
+            we explore guidance that speaks to the human heart and
+            offers clarity in the midst of modern life.
+        </p>
+
+        <p>
+            You will find reflections on faith and daily living, insights into
+            the harmony between science and the Qur’an, reminders rooted in love
+            and mercy, and a sense of community for those who may feel alone
+            on their journey.
+        </p>
+
+        <p>
+            This is not a place of fear or judgment, but one of reassurance,
+            growth, and quiet strength — a space that seeks what is best
+            for the soul and offers light during difficult moments.
         </p>
     </section>
 </main>
