--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         <h2>A Place for Reflection and Understanding</h2>
 
         <p>
-            This website was created for Muslims living in non-Muslim countries,
-            for those who are new to Islam, and for anyone who is simply curious
-            to learn what Islam is truly about.
+            This space is for anyone seeking understanding, guidance, or inspiration.
+            Whether you are a Muslim living in a non-Muslim country, a new Muslim,
+            or someone curious about Islam, you are warmly welcomed here.
         </p>
 
         <p>
