--- a/sunnah.html
+++ b/sunnah.html
@@ -22,8 +22,11 @@
 
 <main class="content">
     <p>
-        Write your Sunnah-related reflections here.
-        You can add paragraphs, quotes, or sections as you like.
+        The Sunnah of the Prophet Muhammad ﷺ is not meant to burden hearts, but to heal them.
+        It is a living example of kindness, patience, humility, and mercy — shown through everyday actions, gentle words, and deep understanding of human nature. The Prophet ﷺ met people where they were, uplifted them without humiliation, and guided them with wisdom and compassion.
+        In this space, the Sunnah is explored not as a list of expectations, but as a source of comfort and direction — offering guidance for relationships, personal struggles, and moments of doubt.
+
+        The Sunnah reminds us that faith is meant to soften us, not harden us — and to bring light into our lives, not heaviness.
     </p>
 </main>
 
