--- a/sunnah.html
+++ b/sunnah.html
@@ -22,10 +22,10 @@
 
 <main class="content">
     <p>
-        The Sunnah of the Prophet Muhammad ﷺ is not meant to burden hearts, but to heal them.
-        It is a living example of kindness, patience, humility, and mercy — shown through everyday actions, gentle words, and deep understanding of human nature. The Prophet ﷺ met people where they were, uplifted them without humiliation, and guided them with wisdom and compassion.
-        In this space, the Sunnah is explored not as a list of expectations, but as a source of comfort and direction — offering guidance for relationships, personal struggles, and moments of doubt.
-
+        The Sunnah of the Prophet Muhammad ﷺ is not meant to burden hearts, but to heal them. <br>
+        It is a living example of kindness, patience, humility, and mercy — shown through everyday actions, gentle words, and deep understanding of human nature. The Prophet ﷺ met people where they were, uplifted them without humiliation, and guided them with wisdom and compassion. <br>
+        In this space, the Sunnah is explored not as a list of expectations, but as a source of comfort and direction — offering guidance for relationships, personal struggles, and moments of doubt. <br>
+<br>
         The Sunnah reminds us that faith is meant to soften us, not harden us — and to bring light into our lives, not heaviness.
     </p>
 </main>
