--- a/sunnah.html
+++ b/sunnah.html
@@ -21,6 +21,21 @@
 </nav>
 
 <main class="content">
+    <section class="opening-quote">
+        <!-- Quote in English -->
+        <h2 class="quote">
+            "The best among you are those who are best to their families."
+        </h2>
+
+        <!-- Arabic version below -->
+        <p class="arabic">خَيْرُكُمْ خَيْرُكُمْ لِأَهْلِهِ</p>
+
+        <!-- Short explanatory paragraph -->
+        <p>
+            The Sunnah teaches patience, compassion, and practical guidance for everyday life.
+            Here we explore these timeless lessons, offering gentle advice for your journey.
+        </p>
+    </section>
     <p>
         The Sunnah of the Prophet Muhammad ﷺ is not meant to burden hearts, but to heal them. <br>
         It is a living example of kindness, patience, humility, and mercy — shown through everyday actions, gentle words, and deep understanding of human nature. The Prophet ﷺ met people where they were, uplifted them without humiliation, and guided them with wisdom and compassion. <br>
