--- a/life.html
+++ b/life.html
@@ -21,6 +21,16 @@
 </nav>
 
 <main class="content">
+    <section class="opening-quote">
+        <h2 class="quote">
+            "Take care of your life and your soul, for they are a trust from Allah."
+        </h2>
+        <p class="arabic">اعْتَنِ بِحَيَاتِكَ وَنَفْسِكَ فَإِنَّهَا أَمَانَةٌ مِنَ اللهِ</p>
+        <p>
+            Life can be complex, but with guidance from the Qur’an and the Prophets,
+            we can navigate challenges with hope, clarity, and faith.
+        </p>
+    </section>
     <p>
         Write your Life-related reflections here.
         You can add paragraphs, quotes, or sections as you like.
