--- a/science.html
+++ b/science.html
@@ -21,6 +21,16 @@
 </nav>
 
 <main class="content">
+    <section class="opening-quote">
+        <h2 class="quote">
+            "Do they not look at the sky above them – how We have built it and adorned it?"
+        </h2>
+        <p class="arabic">أَفَلَا يَنظُرُونَ إِلَى السَّمَاءِ فَوْقَهُمْ كَيْفَ بَنَيْنَاهَا وَزَيَّنَّاهَا</p>
+        <p>
+            The Qur’an encourages observation, reflection, and curiosity. Here, we explore
+            the harmony between science and faith, inspiring awe and understanding.
+        </p>
+    </section>
     <p>
         Write your Science-related reflections here.
         You can add paragraphs, quotes, or sections as you like.
