--- a/love.html
+++ b/love.html
@@ -21,6 +21,16 @@
 </nav>
 
 <main class="content">
+    <section class="opening-quote">
+        <h2 class="quote">
+            "None of you truly believes until he loves for his brother what he loves for himself."
+        </h2>
+        <p class="arabic">لَا يُؤْمِنُ أَحَدُكُمْ حَتَّى يُحِبَّ لِأَخِيهِ مَا يُحِبُّ لِنَفْسِهِ</p>
+        <p>
+            Love and compassion are central to Islam. This page explores nurturing the heart,
+            relationships, and self-love through the lens of faith and mercy.
+        </p>
+    </section>
     <p>
         Write your Love-related reflections here.
         You can add paragraphs, quotes, or sections as you like.
