--- a/community.html
+++ b/community.html
@@ -21,6 +21,17 @@
 </nav>
 
 <main class="content">
+    <section class="opening-quote">
+        <h2 class="quote">
+            "The believers, in their love, mercy, and compassion, are like one body."
+        </h2>
+        <p class="arabic">الْمُؤْمِنُونَ فِي مَوَدَّتِهِم وَرَحْمَتِهِم وَتَعَاطُفِهِم كَجَسَدٍ وَاحِدٍ</p>
+        <p>
+            Community is a source of strength, understanding, and support.
+            Islam encourages connection, empathy, and walking alongside one another
+            through life’s challenges.
+        </p>
+    </section>
     <p>
         Write your Community-related reflections here.
         You can add paragraphs, quotes, or sections as you like.
