--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <header class="hero">
-    <h1>Reflections</h1>
+    <h1>Journey</h1>
     <p>Thoughts on Sunnah, Life, Science, Love, and Community</p>
 </header>
 
