--- a/science.html
+++ b/science.html
@@ -14,6 +14,7 @@
 
 <nav class="nav">
     <a href="index.html">Home</a>
+    <a href="sunnah.html">Sunnah</a>
     <a href="life.html">Life</a>
     <a href="science.html">Science</a>
     <a href="love.html">Love</a>
