--- a/life.html
+++ b/life.html
@@ -33,8 +33,7 @@
         </p>
     </section>
     <p>
-        Write your Life-related reflections here.
-        You can add paragraphs, quotes, or sections as you like.
+        Life-related reflections here.
     </p>
 </main>
 
