--- a/love.html
+++ b/love.html
@@ -33,8 +33,7 @@
         </p>
     </section>
     <p>
-        Write your Love-related reflections here.
-        You can add paragraphs, quotes, or sections as you like.
+        Love-related reflections.
     </p>
 </main>
 
