--- a/science.html
+++ b/science.html
@@ -33,8 +33,7 @@
         </p>
     </section>
     <p>
-        Write your Science-related reflections here.
-        You can add paragraphs, quotes, or sections as you like.
+        Science related themes.
     </p>
 </main>
 
