--- a/community.html
+++ b/community.html
@@ -34,8 +34,7 @@
         </p>
     </section>
     <p>
-        Write your Community-related reflections here.
-        You can add paragraphs, quotes, or sections as you like.
+        Community reflections here.
     </p>
 </main>
 
