--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <title>Journey</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+
+    <!-- Hover link styling -->
+    <style>
+        .nav a {
+            text-decoration: none;
+            font-weight: 400;   /* reserve space */
+            cursor: pointer;
+            transition: font-weight 0.15s ease;
+        }
+
+        .nav a:hover {
+            font-weight: 700;
+        }
+    </style>
 </head>
 <body>
 
@@ -56,6 +70,9 @@
 <footer>
     <p>© 2025 Reflections</p>
 </footer>
+
+</body>
+</html>
 
 </body>
 </html>
