--- a/science.html
+++ b/science.html
@@ -1,10 +1,41 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Science</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+
+    <!-- Book download styling -->
+    <style>
+        .book-download {
+            margin-top: 2rem;
+            padding: 1rem;
+            border: 1px solid #ddd;
+            border-radius: 10px;
+            background-color: #fafafa;
+        }
+
+        .book-download h3 {
+            margin-bottom: 0.5rem;
+        }
+
+        .book-download a {
+            display: inline-block;
+            margin-top: 0.5rem;
+            padding: 10px 18px;
+            border-radius: 8px;
+            text-decoration: none;
+            font-weight: 600;
+            border: 1px solid #ccc;
+            transition: all 0.2s ease;
+        }
+
+        .book-download a:hover {
+            font-weight: 700;
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
 
@@ -32,9 +63,25 @@
             the harmony between science and faith, inspiring awe and understanding.
         </p>
     </section>
+
     <p>
         Science related themes.
     </p>
+
+    <!-- 📘 Book Download Section -->
+    <section class="book-download">
+        <h3>Recommended Reading</h3>
+        <p>
+            Download this introductory book that explores Islam and its teachings:
+        </p>
+
+        <a href="https://archive.org/download/islam-guide_pdfbooksfree.pk/islam-guide.pdf"
+           target="_blank"
+           rel="noopener noreferrer">
+            Download: The Guide to Understanding Islam (PDF)
+        </a>
+    </section>
+
 </main>
 
 <footer>
