--- a/science.html
+++ b/science.html
@@ -72,13 +72,13 @@
     <section class="book-download">
         <h3>Recommended Reading</h3>
         <p>
-            Download this introductory book that explores Islam and its teachings:
+            The first book I read about Islam, which truly opened by eyes to this remarkable religion:
         </p>
 
         <a href="https://archive.org/download/islam-guide_pdfbooksfree.pk/islam-guide.pdf"
            target="_blank"
            rel="noopener noreferrer">
-            Download: The Guide to Understanding Islam (PDF)
+            A Brief Illustrated Guide to Understanding Islam (PDF)
         </a>
     </section>
 
