--- a/science.html
+++ b/science.html
@@ -21,20 +21,26 @@
         }
 
         .book-download a {
-            display: inline-block;
-            margin-top: 0.5rem;
-            padding: 10px 18px;
-            border-radius: 8px;
-            text-decoration: none;
-            font-weight: 600;
-            border: 1px solid #ccc;
-            transition: all 0.2s ease;
-        }
+    display: inline-block;
+    margin-top: 0.5rem;
+    padding: 10px 18px;
+    border-radius: 8px;
+    text-decoration: none;     /* no underline */
+    font-weight: 600;
 
-        .book-download a:hover {
-            font-weight: 700;
-            text-decoration: underline;
-        }
+    color: #2f3a40;            /* muted dark tone */
+    background-color: #f2f4f3; /* soft neutral */
+    border: 1px solid #d6dbd9;
+
+    transition: all 0.2s ease;
+}
+
+.book-download a:hover {
+    color: #1f262b;            /* slightly darker on hover */
+    background-color: #e4e9e7; /* subtle hover background */
+    font-weight: 700;           /* bold on hover */
+    text-decoration: none;      /* still no underline */
+}
     </style>
 </head>
 <body>
