--- a/science.html
+++ b/science.html
@@ -28,7 +28,7 @@
             text-decoration: none; /* no underline */
             font-weight: 600;
             color: #2f3a40; /* muted dark tone */
-            background-color: #bfe3b4; /* soft neutral */
+            background-color: #f2f4f3; /* soft neutral */
             border: 1px solid #d6dbd9;
             transition: all 0.2s ease;
         }
